# churn-forecast

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  pyproject.toml
.github/workflows/: ci.yml  opencode.yml  security.yml
src/: __init__.py
src/configs/: __init__.py  logger.py  settings.py
