[project]
name = "churn-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
authors = [
    { name = "Vipin Kumar", email = "krvipin15@tutamail.com" }
]
requires-python = ">=3.12,<3.13"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed"
]
dependencies = []

[project.urls]
"Source" = "https://github.com/krvipin15/churn-forecast"
"Bug Reports" = "https://github.com/krvipin15/churn-forecast/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]

[tool.prefect]
logging.level = "INFO"

[tool.bandit]
exclude_dirs = [".venv/", "tests/"]
skips = ["B101", "B311"]
targets = ["src/"]

[tool.ty.environment]
python = ".venv"
python-platform = "linux"
python-version = "3.12"
root = ["."]

[tool.ty.terminal]
output-format = "concise"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "BLE", # Blind except
  "C4", # flake8-comprehensions
  "D", # docstrings
  "DTZ", # flake8-datetimez
  "E", # pycodestyle errors
  "ERA", # eradicate (commented-out code)
  "F", # pyflakes
  "FBT", # Boolean traps
  "G", # Logging format
  "I", # isort
  "N", # pep8-naming
  "PERF", # perflint
  "PL", # pylint
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific rules
  "S", # flake8-bandit (basic security)
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP", # pyupgrade
  "W" # pycodestyle warnings
]
ignore = [
  "E501", # line too long — handled by formatter
  "PLR0912", # too many branches — acceptable in pipeline logic
  "PLR0913", # too many arguments — common in ML training functions
  "S311", # random — not used for crypto
  "N803", # argument name should be lowercase
  "N806", # Variable name should be lowercase
  "N815", # Variable name in class scope should not be mixedCase
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PLR2004", "S101"]
"notebooks/**/*.ipynb" = ["T201", "BLE001"]
"scripts/*.py" = ["T20"]
"src/configs/settings.py" = ["N802"]
"src/database/models/**/*.py" = ["RUF012"]
"alembic/env.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "--tb=short",
  "--cov=src",
  "--cov-fail-under=85",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
  "-ra"
]
markers = [
  "integration: tests requiring external services",
  "unit: fast, isolated unit tests",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "*/__init__.py",
  "*/conftest.py",
  "src/configs/*",
  "tests/*"
]

[tool.coverage.report]
exclude_lines = [
  "@abstractmethod",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "pragma: no cover",
  "raise NotImplementedError"
]
fail_under = 85
show_missing = true
skip_covered = false
